--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/opponentLogo4" />
 
     <TextView
-        android:id="@+id/opponentLeagueTV4"
+        android:id="@+id/opponentCountryTV4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -148,7 +148,7 @@
         android:autofillHints="@string/goalsHint"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/opponentLeagueTV4" />
+        app:layout_constraintTop_toBottomOf="@+id/opponentCountryTV4" />
 
     <TextView
         android:id="@+id/wagerTV4"
