--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StatisticsActivity">
+    tools:context=".Activities.StatisticsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/StatsList"
@@ -50,7 +50,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:text="@string/gamesPlayedDummy"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/gamesPlayedTV"
@@ -73,7 +72,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:text="@string/winsDummy"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/winsTV"
