--- a/app/src/main/res/layout/stat_view.xml
+++ b/app/src/main/res/layout/stat_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -21,10 +21,10 @@
                 android:id="@+id/myTeamIMG"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/myClubDummy"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/myClubDummy"
                 app:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <TextView
@@ -45,10 +45,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
+                android:contentDescription="@string/opponentClubDummy"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/vsTV"
                 app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/opponentClubDummy"
                 app:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <TextView
